<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.theresa.project.CountryActivity">

    <TableRow>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginTop="37dp"
            android:layout_span="2"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countryText"
            android:layout_marginTop="56dp"
            android:layout_span="2"
            android:textColor="@color/white"
            android:textStyle="normal|bold|italic"
            android:textSize="@dimen/font_size_title"/>
    </TableRow>


    <TableRow>
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/capital"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/font_size_content"/>
        <TextView
            android:id="@+id/capitalText"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="56dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/region"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/font_size_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/regionText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="56dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/subregion"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/font_size_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/subregionText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="56dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/population"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/font_size_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/populationText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="56dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/currency"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/font_size_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/currencyText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="56dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textSize="@dimen/font_size_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/languageText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="56dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"/>
    </TableRow>
</TableLayout>
